==> SL-RU/Norilsk/pult411/nrf24/nrf24.c <==
#include "nrf24.h"
#define nRF24_CE_L() HAL_GPIO_WritePin(n->ce_port, n->ce_pin, GPIO_PIN_RESET)
#define nRF24_CE_H() HAL_GPIO_WritePin(n->ce_port, n->ce_pin, GPIO_PIN_SET)
#define nRF24_CSN_L() HAL_GPIO_WritePin(n->csn_port, n->csn_pin, GPIO_PIN_RESET)
#define nRF24_CSN_H() HAL_GPIO_WritePin(n->csn_port, n->csn_pin, GPIO_PIN_SET)

static uint8_t nRF24_ReadReg(NRF24 *n, uint8_t reg)
{
    uint8_t value;
    
    nRF24_CSN_L();
    //nRF24_LL_RW(n, reg & nRF24_MASK_REG_MAP);
    //value = nRF24_LL_RW(n, nRF24_CMD_NOP);
    uint8_t tx[2] = {reg & nRF24_MASK_REG_MAP, nRF24_CMD_NOP};
    uint8_t rx[2] = {0};
    HAL_SPI_TransmitReceive(n->spi, tx, rx, 2, 10);
    value = rx[1];
    nRF24_CSN_H();
    return value;
}

static void nRF24_WriteReg(NRF24 *n, uint8_t reg, uint8_t value)
{
    nRF24_CSN_L();
    if (reg < nRF24_CMD_W_REGISTER) {
        // This is a register access
        uint8_t tx[2] = {nRF24_CMD_W_REGISTER
                         | (reg & nRF24_MASK_REG_MAP),
                         value };
        HAL_SPI_Transmit(n->spi, tx, 2, 10);
    } else {
        // This is a single byte command or future command/register
        uint8_t tx[2] = {reg, 0};
        if ((reg != nRF24_CMD_FLUSH_TX) && (reg != nRF24_CMD_FLUSH_RX) && \
            (reg != nRF24_CMD_REUSE_TX_PL) && (reg != nRF24_CMD_NOP)) {
            // Send register value
            tx[1] = value;
            HAL_SPI_Transmit(n->spi, tx, 2, 10);
        }
        else {
            HAL_SPI_Transmit(n->spi, tx, 1, 10);
        }
    }
    nRF24_CSN_H();
}

static void nRF24_ReadMBReg(NRF24 *n,
                            uint8_t reg, uint8_t *pBuf,
                            uint8_t count)
{
    uint8_t tbuf[128] = {0};
    uint8_t rbuf[128] = {0};
    if(count > 126)
    {
        printf("ReadMBReg small buf\n");
    }
    tbuf[0] = reg;
    nRF24_CSN_L();
    HAL_SPI_TransmitReceive(n->spi, tbuf, rbuf, count + 1, 100);
    nRF24_CSN_H();
    int i = 1;
    while (count--) {
        *pBuf++ = rbuf[i];
        i++;
    }
}

static void nRF24_WriteMBReg(NRF24 *n,
                             uint8_t reg, uint8_t *pBuf,
                             uint8_t count)
{
    nRF24_CSN_L();
    uint8_t tbuf[128] = {0};
    if(count > 126)
    {
        printf("WriteMBReg small buf\n");
    }
    tbuf[0] = reg;
    int i = 0;
    int cnt = count;
    while (count--) {
        tbuf[i + 1] = pBuf[i];
        i++;
    }
    nRF24_CSN_L();
    HAL_SPI_Transmit(n->spi, tbuf, cnt + 1, 100);
    nRF24_CSN_H();
}

void nRF24_Init    (NRF24 *n,
                    SPI_HandleTypeDef *spi,
                    GPIO_TypeDef *ce_port,
                    uint16_t     ce_pin,
    
                    GPIO_TypeDef *csn_port,
                    uint16_t     csn_pin,
    
                    GPIO_TypeDef *irq_port,
                    uint16_t     irq_pin      )
{
    n->spi = spi;
    n->ce_port  = ce_port;
    n->ce_pin   = ce_pin;
    n->csn_port = csn_port;
    n->csn_pin  = csn_pin;
    n->irq_port = irq_port;
    n->irq_pin  = irq_pin;

    nRF24_CE_H();
    nRF24_CSN_H();
    // Write to registers their initial values
    nRF24_WriteReg(n, nRF24_REG_CONFIG, 0x08);
    nRF24_WriteReg(n, nRF24_REG_EN_AA, 0x3F);
    nRF24_WriteReg(n, nRF24_REG_EN_RXADDR, 0x03);
    nRF24_WriteReg(n, nRF24_REG_SETUP_AW, 0x03);
    nRF24_WriteReg(n, nRF24_REG_SETUP_RETR, 0x03);
    nRF24_WriteReg(n, nRF24_REG_RF_CH, 0x02);
    nRF24_WriteReg(n, nRF24_REG_RF_SETUP, 0x0E);
    nRF24_WriteReg(n, nRF24_REG_STATUS, 0x00);
    nRF24_WriteReg(n, nRF24_REG_RX_PW_P0, 0x00);
    nRF24_WriteReg(n, nRF24_REG_RX_PW_P1, 0x00);
    nRF24_WriteReg(n, nRF24_REG_RX_PW_P2, 0x00);
    nRF24_WriteReg(n, nRF24_REG_RX_PW_P3, 0x00);
    nRF24_WriteReg(n, nRF24_REG_RX_PW_P4, 0x00);
    nRF24_WriteReg(n, nRF24_REG_RX_PW_P5, 0x00);
    nRF24_WriteReg(n, nRF24_REG_DYNPD, 0x00);
    nRF24_WriteReg(n, nRF24_REG_FEATURE, 0x00);

    // Clear the FIFO's
    nRF24_FlushRX(n);
    nRF24_FlushTX(n);

    // Clear any pending interrupt flags
    nRF24_ClearIRQFlags(n);

    // Deassert CSN pin (chip release)
    nRF24_CSN_H();
}

void nRF24_SetAddr(NRF24 *n, uint8_t pipe, const uint8_t *addr)
{
    uint8_t addr_width;

    // RX_ADDR_Px register
    switch (pipe) {
    case nRF24_PIPETX:
    case nRF24_PIPE0:
    case nRF24_PIPE1:
        // Get address width
        addr_width = nRF24_ReadReg(n, nRF24_REG_SETUP_AW) + 1;
        // Write address in reverse order (LSByte first)
        addr += addr_width;
        nRF24_CSN_L();
        uint8_t ad[128] = {0};
        uint8_t adr_width = addr_width;
        int i = 1;
        ad[0] = nRF24_CMD_W_REGISTER | nRF24_ADDR_REGS[pipe];
        do {
            ad[i] = *addr--;
            i++;
        } while (addr_width--);
        HAL_SPI_Transmit(n->spi, ad, adr_width + 1, 10);
        nRF24_CSN_H();
        break;
    case nRF24_PIPE2:
    case nRF24_PIPE3:
    case nRF24_PIPE4:
    case nRF24_PIPE5:
        // Write address LSBbyte (only first byte from the addr buffer)
        nRF24_WriteReg(n, nRF24_ADDR_REGS[pipe], *addr);
        break;
    default:
        // Incorrect pipe number -> do nothing
        break;
    }
}
