==> yennhan1211/nrfesp32/lib/rf24/nrf24.c <==
#include "freertos/FreeRTOS.h"
#include "freertos/queue.h"
#include "freertos/task.h"
#include <stdlib.h>
#include <string.h>
#include <stdio.h>
#include "esp_log.h"
#include "driver/gpio.h"
#include "nrf24.h"
#define nRF24_CSN_L() gpio_set_level(15, 0);
#define nRF24_CSN_H() gpio_set_level(15, 1);
#define CE_PIN          17
#define nRF24_CE_H()    gpio_set_level(CE_PIN, 1);
#define nRF24_CE_L()    gpio_set_level(CE_PIN, 0);

uint8_t nRF24_ReadReg(uint8_t reg)
{
    spi_transaction_t t;

    t.length = 16;
    t.rxlength = 0;
    t.flags = SPI_TRANS_USE_RXDATA | SPI_TRANS_USE_TXDATA;
    t.tx_data[0] = reg & nRF24_MASK_REG_MAP;
    t.tx_data[1] = nRF24_CMD_NOP;

    nRF24_CSN_L();
    esp_err_t ret = spi_device_transmit(g_spi, &t);
    assert( ret == ESP_OK );
    nRF24_CSN_H();

    return t.rx_data[1];
}

static void nRF24_WriteReg(uint8_t reg, uint8_t value) {
    spi_transaction_t t;

    t.rxlength = 0;
    t.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA;

    if (reg < nRF24_CMD_W_REGISTER) {
        // This is a register access
        t.length = 16;
        t.tx_data[0] = nRF24_CMD_W_REGISTER | (reg & nRF24_MASK_REG_MAP);
        t.tx_data[1] = value;
        // spiTransfer(nRF24_CMD_W_REGISTER | (reg & nRF24_MASK_REG_MAP));
        // spiTransfer(value);
    } else {
        // This is a single byte command or future command/register
        t.length = 8;
        t.tx_data[0] = reg;
        // spiTransfer(reg);
        if ((reg != nRF24_CMD_FLUSH_TX) && (reg != nRF24_CMD_FLUSH_RX) && \
            (reg != nRF24_CMD_REUSE_TX_PL) && (reg != nRF24_CMD_NOP)) {
                // Send register value
                t.length = 16;
                t.tx_data[1] = value;
                // spiTransfer(value);
        }
    }
    nRF24_CSN_L();
    esp_err_t ret = spi_device_transmit(g_spi, &t);
    assert( ret == ESP_OK );
    nRF24_CSN_H();
}

static void nRF24_ReadMBReg(uint8_t reg, uint8_t *pBuf, uint8_t count) {
    esp_err_t ret = ESP_OK;
    spi_transaction_t t;
    memset(&t, 0, sizeof(t));       //Zero out the transaction

    t.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA;
    t.length = 8;
    t.rxlength = 0;
    t.tx_data[0] = reg;

    nRF24_CSN_L();
    ret = spi_device_transmit(g_spi, &t);
    assert( ret == ESP_OK );

    memset(&t, 0, sizeof(t));       //Zero out the transaction
    t.length = count * 8;
    t.rx_buffer = (void*)pBuf;

    ret = spi_device_transmit(g_spi, &t);
    nRF24_CSN_H();
    assert( ret == ESP_OK );
    // spiTransfer(reg);
    // while (count--) {
    //     *pBuf++ = spiTransfer(nRF24_CMD_NOP);
    // }

}

static void nRF24_WriteMBReg(uint8_t reg, uint8_t *pBuf, uint8_t count) {
    esp_err_t ret = ESP_OK;
    spi_transaction_t t;
    memset(&t, 0, sizeof(t));       //Zero out the transaction

    t.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA;
    t.length = 8;
    t.rxlength = 0;
    t.tx_data[0] = reg;
    nRF24_CSN_L();
    ret = spi_device_transmit(g_spi, &t);
    assert( ret == ESP_OK );

    memset(&t, 0, sizeof(t));       //Zero out the transaction
    t.length = count * 8;
    t.tx_buffer = (void*)pBuf;

    ret = spi_device_transmit(g_spi, &t);
    nRF24_CSN_H();
    assert( ret == ESP_OK );
    // spiTransfer(reg);
    // while (count--) {
    //     spiTransfer(*pBuf++);
    // }

}

void nRF24_Init(spi_device_handle_t _spi) {
    // hold the handle
    g_spi = _spi;

    // Write to registers their initial values
    nRF24_WriteReg(nRF24_REG_CONFIG, 0x08);
    // nRF24_CE_Low();
    //  nRF24_WriteReg(nRF24_REG_CONFIG, 0x0F);
    ESP_LOGI("test", "nRF24_REG_CONFIG: %x\n", nRF24_ReadReg(nRF24_REG_CONFIG));
    nRF24_WriteReg(nRF24_REG_EN_AA, 0x3F);
    ESP_LOGI("test", "nRF24_REG_EN_AA: %x\n", nRF24_ReadReg(nRF24_REG_EN_AA));
    nRF24_WriteReg(nRF24_REG_EN_RXADDR, 0x00);
    ESP_LOGI("test", "nRF24_REG_EN_RXADDR: %x\n", nRF24_ReadReg(nRF24_REG_EN_RXADDR));
    nRF24_WriteReg(nRF24_REG_SETUP_AW, 0x03);
    ESP_LOGI("test", "nRF24_REG_SETUP_AW: %x\n", nRF24_ReadReg(nRF24_REG_SETUP_AW));
    nRF24_WriteReg(nRF24_REG_SETUP_RETR, 0x03);
    ESP_LOGI("test", "nRF24_REG_SETUP_RETR: %x\n", nRF24_ReadReg(nRF24_REG_SETUP_RETR));
    nRF24_WriteReg(nRF24_REG_RF_CH, 0x01);
    ESP_LOGI("test", "nRF24_REG_RF_CH: %x\n", nRF24_ReadReg(nRF24_REG_RF_CH));
    nRF24_WriteReg(nRF24_REG_RF_SETUP, 0x0E);
    ESP_LOGI("test", "nRF24_REG_RF_SETUP: %x\n", nRF24_ReadReg(nRF24_REG_RF_SETUP));
    nRF24_WriteReg(nRF24_REG_STATUS, 0x00);
    nRF24_WriteReg(nRF24_REG_RX_PW_P0, 0x00);
    nRF24_WriteReg(nRF24_REG_RX_PW_P1, 0x00);
    nRF24_WriteReg(nRF24_REG_RX_PW_P2, 0x00);
    nRF24_WriteReg(nRF24_REG_RX_PW_P3, 0x00);
    nRF24_WriteReg(nRF24_REG_RX_PW_P4, 0x00);
    nRF24_WriteReg(nRF24_REG_RX_PW_P5, 0x00);
    nRF24_WriteReg(nRF24_REG_DYNPD, 0x00);
    nRF24_WriteReg(nRF24_REG_FEATURE, 0x00);

    // Clear the FIFO's
    nRF24_FlushRX();
    nRF24_FlushTX();

// Clear any pending interrupt flags
    nRF24_ClearIRQFlags();
    // nRF24_CE_High();

    // Deassert CSN pin (chip release)
    nRF24_CSN_H();
    dynamic_payloads_enabled = false;
}

void nRF24_SetAddr(uint8_t pipe, const uint8_t *addr) {
    uint8_t addr_width;

    // RX_ADDR_Px register
    switch (pipe) {
      case nRF24_PIPETX:
      case nRF24_PIPE0:
      case nRF24_PIPE1:
        // Get address width
        addr_width = nRF24_ReadReg(nRF24_REG_SETUP_AW) + 2;
        // Write address in reverse order (LSByte first)
        // addr += addr_width;
        nRF24_CSN_L();
        // spiTransfer(nRF24_CMD_W_REGISTER | nRF24_ADDR_REGS[pipe]);
        // do {
        //     spiTransfer(*addr--);
        // } while (addr_width--);

        spi_transaction_t t;
        t.length = 8;
        t.rxlength = 0;
        t.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA;
        t.tx_data[0] = nRF24_CMD_W_REGISTER | nRF24_ADDR_REGS[pipe];
        esp_err_t ret = spi_device_transmit(g_spi, &t);
        assert( ret == ESP_OK );

        memset(&t, 0, sizeof(spi_transaction_t));
        t.length = 8 * addr_width;
        t.tx_buffer = (void*)addr; // FIX ME
        ret = spi_device_transmit(g_spi, &t);
        assert( ret == ESP_OK );
        nRF24_CSN_H();
        break;
      case nRF24_PIPE2:
      case nRF24_PIPE3:
      case nRF24_PIPE4:
      case nRF24_PIPE5:
        // Write address LSBbyte (only first byte from the addr buffer)
        nRF24_WriteReg(nRF24_ADDR_REGS[pipe], *addr);
        break;
      default:
        // Incorrect pipe number -> do nothing
        break;
    }
}
